@@ -1033,6 +1033,36 @@ function browseItemAction(view, act, item, index, event) {
         }
         download(item, item.id.startsWith("album_id:") ? view.buildCommand(item) : undefined, aa);
     } else {
+        // If we are acting on a multi-disc album, prompt which disc we should act on
+        if (item.multi && (PLAY_ACTION==act || ADD_ACTION==act || INSERT_ACTION==act)) {
+            var command = view.buildCommand(item);
+            lmsList(view.playerId(), command.command, command.params, 0, LMS_BATCH_SIZE, false, view.nextReqId()).then(({data}) => {
+                var resp = parseBrowseResp(data, item, view.options, undefined, view.command, view.inGenre);
+                if (resp.items.length<=0) {
+                    return;
+                }
+                var discs = [{title:i18n('All discs')}];
+                for (var i=0, loop=resp.items, len=loop.length; i<len; ++i) {
+                    if (loop[i].header) {
+                        discs.push(loop[i]);
+                    }
+                }
+                choose(ACTIONS[act].title, discs).then(choice => {
+                    if (undefined!=choice) {
+                        var tracks = [];
+                        for (var i=0, loop=resp.items, len=loop.length; i<len; ++i) {
+                            if (!loop[i].header && (undefined==choice.id || loop[i].filter==choice.id)) {
+                                tracks.push(loop[i]);
+                            }
+                        }
+                        view.doList(tracks, act);
+                        bus.$emit('showMessage', i18n("Adding tracks..."));
+                    }
+                });
+            });
+            return;
+        }
+
         var command = browseBuildFullCommand(view, item, act);
         if (command.command.length===0) {
             bus.$emit('showError', undefined, i18n("Don't know how to handle this!"));
