@@ -15,7 +15,7 @@ var app = new Vue({
                             manage: false, rndmix: false, favorite: false, rating: false, sleep: false, movequeue: false,
                             iteminfo: false, iframe: false, dstm: false, savequeue: false, icon: false, prompt:false,
                             addtoplaylist: false, file: false, groupvolume: false, advancedsearch: false, downloadstatus:false,
-                            notifications: false, gallery: false
+                            notifications: false, gallery: false, choice: false
                           } }
     },
     created() {
