@@ -2,6 +2,8 @@
 -----
 1. Draw multi-disc icon top-left for multi-disc albums, in grid view.
 2. Add 'Remove disc' option to play queue context menu.
+3. When adding a multi-disc album, prompt whether to add all discs or just a
+   specific disc.
 
 2.7.3
 -----
